--- a/index.html
+++ b/index.html
@@ -6,23 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./index.css" />
+    <script defer src="./practice.js"></script>
   </head>
-  <body>
-    <div class="USA">
+  <body class="USA">
       <header>
-        <h1>Welcome to Vin's Home Page</h1>
+        <h1>Welcome to Vishal Vaid's Home Page</h1>
+
         <img
           class="logo"
           src="./1200px-Brigham_Young_University–Idaho_medallion.svg.png"
           alt="LOGO"
         />
+        <h2>Wdd 230: Assignment Portal</h2>
       </header>
+      <hr>
       <main>
         <img src="./thumbnail_IMG_1551.jpg" alt="My Picture" />
         <ul>
           <li><a href="./chambers/index.html">Home Page</a></li>
         </ul>
       </main>
+      <hr>
+      <footer>
+        <h3>&copy; 2022 - Visal Vaid - New York, New York</h3>
+        <h2 id="currentdate"></h2>
+      </footer>
     </div>
   </body>
 </html>
