--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         />
         <h2>Wdd 230: Assignment Portal</h2>
       </header>
-      <hr>
+      <hr id="abc">
       <main>
-        <img src="./thumbnail_IMG_1551.jpg" alt="My Picture" />
+        <img class="img1" src="./thumbnail_IMG_1551.jpg" alt="My Picture" />
         <ul>
           <li><a href="./chambers/index.html">Home Page</a></li>
         </ul>
