--- a/index.html
+++ b/index.html
@@ -9,28 +9,49 @@
     <script defer src="./practice.js"></script>
   </head>
   <body class="USA">
-      <header>
-        <h1>Welcome to Vishal Vaid's Home Page</h1>
+    <header>
+      <h1>Welcome to Vishal Vaid's Home Page</h1>
 
-        <img
-          class="logo"
-          src="./1200px-Brigham_Young_University–Idaho_medallion.svg.png"
-          alt="LOGO"
-        />
-        <h2>Wdd 230: Assignment Portal</h2>
-      </header>
-      <hr id="abc">
-      <main>
-        <img class="img1" src="./thumbnail_IMG_1551.jpg" alt="My Picture" />
-        <ul>
-          <li><a href="./chambers/index.html">Home Page</a></li>
-        </ul>
-      </main>
-      <hr>
-      <footer>
-        <h3>&copy; 2022 - Visal Vaid - New York, New York</h3>
-        <h2 id="currentdate"></h2>
-      </footer>
-    </div>
+      <img
+        class="logo"
+        src="./1200px-Brigham_Young_University–Idaho_medallion.svg.png"
+        alt="LOGO"
+      />
+      <h2>Wdd 230: Assignment Portal</h2>
+    </header>
+    <hr id="abc" />
+    <main>
+      <img class="img1" src="./thumbnail_IMG_1551.jpg" alt="My Picture" />
+      <ul>
+        <li>Lesson 01: <a href="#">Home Page</a></li>
+
+        <li>Lesson 02: <a href="#">Home Page</a></li>
+
+        <li>Lesson 03: <a href="#">Home Page</a></li>
+
+        <li>Lesson 04: <a href="#">Home Page</a></li>
+
+        <li>Lesson 05: <a href="#">Home Page</a></li>
+
+        <li>Lesson 06: <a href="#">Home Page</a></li>
+
+        <li>Lesson 07: <a href="#">Home Page</a></li>
+
+        <li>Lesson 08: <a href="#">Home Page</a></li>
+
+        <li>Lesson 09: <a href="#">Home Page</a></li>
+
+        <li>Lesson 10: <a href="#">Home Page</a></li>
+
+        <li>Lesson 11: <a href="#">Home Page</a></li>
+
+        <li>Lesson 12: <a href="#">Home Page</a></li>
+      </ul>
+    </main>
+    <hr />
+    <footer>
+      <h3>&copy; 2022 - Visal Vaid - New York, New York</h3>
+      <h2 id="currentdate">Last Updated</h2>
+    </footer>
   </body>
 </html>
