--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./normalize.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
     <link rel="stylesheet" href="./index.css" />
     <script defer src="./practice.js"></script>
   </head>
   <body class="USA">
     <header>
       <h1>Welcome to Vishal Vaid's Home Page</h1>
+      <a></a>
 
       <img
         class="logo"
