--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
       <ul>
         <li>Lesson 01: <a href="#">Home Page</a></li>
 
-        <li>Lesson 02: <a href="#">Home Page</a></li>
+        <li>
+          Lesson 02: <a href="./lesson2/design-principles.html">Home Page</a>
+        </li>
 
         <li>Lesson 03: <a href="#">Home Page</a></li>
 
