--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <h1>Design Pricipals</h1>
+      <h1>Design Priciples</h1>
     </header>
     <hr />
     <main>
@@ -20,9 +20,11 @@
         <a href="https://maisonsmc.org/en?ref=maxibestof.one" target="_blank"
           >Maisonsmc's website</a
         >
-        <img src="./images/Screenshot (17).png" alt="PARC: Proximity IMG" />
+        <img src="./images/rsz_screenshot1.png" alt="PARC: Proximity IMG" />
         <p>
-          The Maisonsmc website refers to closeness of element in a page. There are different element used to group them together to create a biger page. 
+          The Maisonsmc website refers to closeness of element in a page. There
+          are different element used to group them together to create a biger
+          page.
         </p>
       </section>
       <section>
@@ -31,28 +33,33 @@
         <a href="https://albertalegal.ca/" target="_blank"
           >Albertalegal's website</a
         >
-        <img src="./images/Screenshot (16).png" alt="Hick's Law IMG" />
+        <img src="./images/rsz_screenshot2.png" alt="Hick's Law IMG" />
         <p>
-         Alberta's legal is an idea of website shows more choices to the user. This kind of website help user to take batter decision. One of the example is arranging and organizing the items on the website to help user to find the contant faster.      </p>
+          Alberta's legal is an idea of website shows more choices to the user.
+          This kind of website help user to take batter decision. One of the
+          example is arranging and organizing the items on the website to help
+          user to find the contant faster.
+        </p>
       </section>
-    <section>
+      <section>
         <h2>Visual Hierarchy</h2>
         <h3>Visualcreatures</h3>
-        <a href="https://visualcreatures.com/?section=services-wrapper" target="_blank"
+        <a
+          href="https://visualcreatures.com/?section=services-wrapper"
+          target="_blank"
           >Visualcreatures's website</a
         >
-        <img
-          src="./images/Screenshot (12).png"
-          alt="Visual Hierarchy IMG"
-        />
+        <img src="./images/rsz_screenshot.png" alt="Visual Hierarchy IMG" />
         <p>
-          Visualcreatures's legal is a 2D display website, organization of the design element on the page so that the eye guided to view design page in order of their importance.
+          Visualcreatures's legal is a 2D display website, organization of the
+          design element on the page so that the eye guided to view design page
+          in order of their importance.
         </p>
-      
-    </section>
-    <hr />
+      </section>
+      <hr />
+    </main>
     <footer>
-      <h3> Design Principal &copy; 2022 - VISHAL VAID </h3>
+      <h3>Design Principal &copy; 2022 - VISHAL VAID</h3>
     </footer>
   </body>
 </html>
