--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <li>Lesson 01: <a href="#">Home Page</a></li>
 
         <li>
-          Lesson 02: <a href="./lesson2/design-principles.html">Home Page</a>
+          Lesson 02:
+          <a href="./lesson2/design-principles.html">Design Principles</a>
         </li>
 
         <li>Lesson 03: <a href="#">Home Page</a></li>
