--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a href="./lesson2/design-principles.html">Design Principles</a>
         </li>
 
-        <li>Lesson 03: <a href="#">Home Page</a></li>
+        <li>Lesson 03: <a href="./lesson3/site-planHome.html">Site Plan</a></li>
 
         <li>Lesson 04: <a href="#">Home Page</a></li>
 
