--- a/lesson3/TargetAudience.html
+++ b/lesson3/TargetAudience.html
@@ -30,7 +30,8 @@
         <p>
           Britney is a owner of clothing business in Yonkers New York. She is
           earning great revenue that now she wants to start a newn business of
-          catering in Broklyn New York.
+          catering in Broklyn New York. Britney is using NYC Chambers of
+          Commerce to start her new catering business in Broklyn New York.
         </p>
       </div>
       <img src="./images/rsz_1image.jpg" alt="Audience2" />
