--- a/lesson3/site-planHome.html
+++ b/lesson3/site-planHome.html
@@ -17,7 +17,7 @@
       </nav>
     </header>
     <main>
-      <h2>Purpuse Statment</h2>
+      <h2>Purpose Statment</h2>
       <p>
         One of the main gaol of building this website is help local business to
         communicate with other busniess. We also welcome businesses from other
