--- a/chambers/index.html
+++ b/chambers/index.html
@@ -4,13 +4,73 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <script defer src="./js/jsfile.js"></script>
     <title>Document</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <img src="./images/rsz_logo-color.png" alt="Logo" />
+      <h1>NYC Chambers of Commerce</h1>
+    </header>
+    <nav>
+      <button class="HMB">&#9776</button>
+      <ul>
+        <li><a href="#">Menu</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+    </nav>
     <main>
-      <p>Hello World</p>
+      <div id="div1">
+        <h2>Hero with site name and call to action.</h2>
+      </div>
+      <div id="div2">
+        <h2>Event</h2>
+      </div>
+      <div id="div3a">
+        <h2>Weather</h2>
+      </div>
+      <div id="div3">
+        <h2>News Release</h2>
+      </div>
+      <div id="div4">
+        <h2>Spot light1</h2>
+      </div>
+      <div id="div5">
+        <h2>Spot light2</h2>
+      </div>
+      <div id="div6">
+        <h2>Join</h2>
+      </div>
+      <div id="div7"><h2>Spot light3</h2></div>
     </main>
-    <footer></footer>
+    <footer>
+      <div id="top">
+        <div>
+          <img src="./images/rsz_logo-color.png" alt="logo" />
+          <h4>NYC Chambers of Commerce E 109th st</h4>
+        </div>
+        <div>
+          <h4>nycchambersofcommerce.com</h4>
+          <h4>(917)-123-4567</h4>
+        </div>
+      </div>
+
+      <div id="bottom">
+        <div>
+          <h3>&copy; NYC Chambers of Commerce</h3>
+          <h2>Vishal Vaid</h2>
+        </div>
+        <div>
+          <h4>WDD 230 Project</h4>
+          <h2 id="currentdate">Last Updated</h2>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
