--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 
         <li>Lesson 03: <a href="./lesson3/site-planHome.html">Site Plan</a></li>
 
-        <li>Lesson 04: <a href="./chambers/index.html">Home Page</a></li>
+        <li>
+          Lesson 04: <a href="./chambers/index.html">Chambers Home Page</a>
+        </li>
 
         <li>Lesson 05: <a href="#">Home Page</a></li>
 
