--- a/chambers/index.html
+++ b/chambers/index.html
@@ -16,7 +16,7 @@
       <h1>NYC Chambers of Commerce</h1>
     </header>
     <nav>
-      <button class="HMB">&#9776</button>
+      <button class="HMB">&#9776;</button>
       <ul>
         <li><a href="#">Menu</a></li>
         <li><a href="#home">Home</a></li>
