--- a/chambers/index.html
+++ b/chambers/index.html
@@ -14,6 +14,7 @@
     <header>
       <img src="./images/rsz_logo-color.png" alt="Logo" />
       <h1>NYC Chambers of Commerce</h1>
+      <h2 id="date"><div class="date"></div></h2>
     </header>
     <nav>
       <button class="HMB">&#9776;</button>
