--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
         <li>Lesson 05: <a href="#">Home Page</a></li>
 
+        <li>Lesson 05: <a href="./lesson 5/index.html">DOM Home Work</a></li>
+
         <li>Lesson 06: <a href="#">Home Page</a></li>
 
         <li>Lesson 07: <a href="#">Home Page</a></li>
