--- a/chambers/index.html
+++ b/chambers/index.html
@@ -8,14 +8,18 @@
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <script defer src="./js/jsfile.js"></script>
+    <link rel="shortcut icon" href="./Images/favicon.png" />
     <title>Document</title>
   </head>
   <body>
     <header>
       <img src="./images/rsz_logo-color.png" alt="Logo" />
       <h1>NYC Chambers of Commerce</h1>
-      <h2 id="date"><div class="date"></div></h2>
     </header>
+    <h2 id="date"><div class="date"></div></h2>
+    <div id="RenDate">
+      <h3>Come join us for the Chambers meet and greet Wednesday at 7:00 PM</h3>
+    </div>
     <nav>
       <button class="HMB">&#9776;</button>
       <ul>
@@ -28,25 +32,58 @@
     </nav>
     <main>
       <div id="div1">
-        <h2>Hero with site name and call to action.</h2>
+        <img
+          id="homepic"
+          src="./images/rsz_31rsz_sam-trotman-2f8sxxbp9ny-unsplash.jpg"
+          alt="Home"
+        />
+
+        <button type="button"><a href=""> Join the Chambers </a></button>
       </div>
       <div id="div2">
-        <h2>Event</h2>
+        <h2>Realtor <img id="icon1" src="./images/house.png" alt="" /></h2>
+
+        <h3>The Real State Business</h3>
+        <h4>
+          Your dream house is a one click away from you. Find out the property
+          which match your budget. We offer afordable house for family.
+        </h4>
+        <button type="button"><a href=""> Click Here to learn more </a></button>
       </div>
       <div id="div3a">
         <h2>Weather</h2>
+        <h3><img id="icon2" src="./images/storm.png" alt="" /> 20&#x2103;</h3>
+        <h4><b>Thunderstorm</b></h4>
+        <hr />
+        <p>Wind Speed: 25km/h</p>
+        <p>Wind Chill: 10&#x2103;</p>
       </div>
       <div id="div3">
-        <h2>News Release</h2>
+        <h2>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum atque
+          quibusdam rerum ipsam corporis, nisi, consectetur commodi illum
+          molestiae, blanditiis ab magni odit odio totam tempora! Officiis nam
+          aperiam maxime officia tenetur voluptate numquam odit libero iste quod
+          ratione reprehenderit temporibus minima laboriosam laborum nesciunt,
+          blanditiis fugit eligendi itaque? Excepturi!
+        </h2>
       </div>
       <div id="div4">
-        <h2>Spot light1</h2>
+        <h2>Transport</h2>
+        <img id="icon3" src="./images/box-truck.png" alt="" />
+        <h4>"We get it there for you"</h4>
+        <p>hello@thankfultransport.com</p>
+        <p>+123-456-7890 Website</p>
       </div>
       <div id="div5">
         <h2>Spot light2</h2>
       </div>
       <div id="div6">
-        <h2>Join</h2>
+        <button type="button1"><a href=""> Join us </a></button>
+        <h4>
+          Discover how to join the chamber of commerce and how it will benefits
+          your organization
+        </h4>
       </div>
       <div id="div7"><h2>Spot light3</h2></div>
     </main>
