--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           Lesson 04: <a href="./chambers/index.html">Chambers Home Page</a>
         </li>
 
-        <li>Lesson 05: <a href="#">Home Page</a></li>
+        <li>Lesson 05: <a href="./chambers/index.html">Home Page</a></li>
 
         <li>Lesson 05: <a href="./lesson 5/index.html">DOM Home Work</a></li>
 
