--- a/chambers/index.html
+++ b/chambers/index.html
@@ -16,7 +16,7 @@
       <img src="./images/rsz_logo-color.png" alt="Logo" />
       <h1>NYC Chambers of Commerce</h1>
     </header>
-    <h2 id="date"><div class="date"></div></h2>
+    <div class="date"></div>
     <div id="RenDate">
       <h3>Come join us for the Chambers meet and greet Wednesday at 7:00 PM</h3>
     </div>
@@ -38,7 +38,7 @@
           alt="Home"
         />
 
-        <button type="button"><a href=""> Join the Chambers </a></button>
+        <button type="button">Join the Chambers</button>
       </div>
       <div id="div2">
         <h2>Realtor <img id="icon1" src="./images/house.png" alt="" /></h2>
@@ -48,7 +48,7 @@
           Your dream house is a one click away from you. Find out the property
           which match your budget. We offer afordable house for family.
         </h4>
-        <button type="button"><a href=""> Click Here to learn more </a></button>
+        <button type="button">Click Here to learn more</button>
       </div>
       <div id="div3a">
         <h2>Weather</h2>
@@ -79,7 +79,7 @@
         <h2>Spot light2</h2>
       </div>
       <div id="div6">
-        <button type="button1"><a href=""> Join us </a></button>
+        <button type="button">Join us</button>
         <h4>
           Discover how to join the chamber of commerce and how it will benefits
           your organization
