--- a/chambers/index.html
+++ b/chambers/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <img src="./images/rsz_logo-color.png" alt="Logo" />
+      <img src="./images/rsz_logo-color.webp" alt="Logo" />
       <h1>NYC Chambers of Commerce</h1>
     </header>
     <div class="date"></div>
@@ -32,12 +32,15 @@
     </nav>
     <main>
       <div id="div1">
-        <img
-          id="homepic"
-          src="./images/rsz_31rsz_sam-trotman-2f8sxxbp9ny-unsplash.jpg"
-          alt="Home"
-        />
-
+        <picture>
+          <source media="(min-width:1000px)" srcset="./images/Main.jpg" />
+          <source
+            media="(min-width:500px)"
+            srcset="./images/Landscapemedium.jpg"
+          />
+          <source media="(min-width:1600px)" srcset="./images/rsz_small.jpg" />
+          <img src="./images/rsz_small.jpg" alt="Flowers" style="width: auto" />
+        </picture>
         <button type="button">Join the Chambers</button>
       </div>
       <div id="div2">
@@ -76,7 +79,12 @@
         <p>+123-456-7890 Website</p>
       </div>
       <div id="div5">
-        <h2>Spot light2</h2>
+        <img id="icon4" src="./images/pencil-holder.png" alt="Pencil Holder" />
+        <h2>Code Primera</h2>
+        <h3>An after school coding instructor progrem</h3>
+        <hr />
+        <p>contact@codeprimera.com</p>
+        <p>+999-999-9999 | Website</p>
       </div>
       <div id="div6">
         <button type="button">Join us</button>
@@ -85,7 +93,14 @@
           your organization
         </h4>
       </div>
-      <div id="div7"><h2>Spot light3</h2></div>
+      <div id="div7">
+        <h2>Build a Treefort</h2>
+        <img id="icon5" src="./images/tree-house.png" alt="Tree Picture" />
+        <h3>Over 1000 Plans!</h3>
+        <hr />
+        <p>build@treefort.com</p>
+        <p>+888-888-8888</p>
+      </div>
     </main>
     <footer>
       <div id="top">
