--- a/chambers/index.html
+++ b/chambers/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/main.css" />
     <script defer src="./js/jsfile.js"></script>
     <link rel="shortcut icon" href="./Images/favicon.png" />
+
     <title>Document</title>
   </head>
   <body>
@@ -16,6 +17,7 @@
       <img src="./images/rsz_logo-color.webp" alt="Logo" />
       <h1>NYC Chambers of Commerce</h1>
     </header>
+
     <div class="date"></div>
     <div id="RenDate">
       <h3>Come join us for the Chambers meet and greet Wednesday at 7:00 PM</h3>
@@ -25,7 +27,7 @@
       <ul>
         <li><a href="#">Menu</a></li>
         <li><a href="#home">Home</a></li>
-        <li><a href="#news">News</a></li>
+        <li><a href="./Discover.html">Discover</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="#about">About</a></li>
       </ul>
