--- a/chambers/Form.html
+++ b/chambers/Form.html
@@ -4,53 +4,55 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Forms</title>
     <link rel="stylesheet" href="./css/Form.css" />
-    <title>Form</title>
   </head>
   <body>
-    <!-- post is more secure and get is one when you see on the URL -->
-    <form method="post" action="">
-      <!--Injection?-->
-      <!--We can also put in DIv and use flexbox-->
-      <label for="fname">First Name</label>
-      <!--for and id should always match-->
-      <!--Many types of text type-->
-      <input id="fname" type="text" name="firstname" required />
-      <!--name attribute is for backend-->
-      <label for="lname">First Name</label>
-      <input id="lname" type="text" name="lastname" required />
-
-      <label for="title">Business position Title*:</label>
-      <input type="text" />
-    </form>
-
     <table>
       <thead>
         <tr>
-          <td colspan="2">Header</td>
-          <!--row of first header-->
+          <td colspan="3">ACME Wildwest</td>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td rowspan="2">Week 9</td>
-          <td>Tables</td>
+          <td>Period</td>
+          <td>Sales</td>
+          <td>Sales Goal</td>
         </tr>
         <tr>
-          <td>Form</td>
+          <td>August</td>
+          <td>$3,590</td>
+          <td>$4000</td>
         </tr>
         <tr>
-          <td>Week 10</td>
-          <td>API</td>
+          <td>September</td>
+          <td>$4,420</td>
+          <td>$5,000</td>
         </tr>
         <tr>
-          <td>Week 11</td>
-          <td>Weather App</td>
+          <td>October</td>
+          <td>$4,870</td>
+          <td>$5,000</td>
+        </tr>
+        <tr>
+          <td>November</td>
+          <td>$8,610</td>
+          <td>$7,500</td>
+        </tr>
+        <tr>
+          <td>Black Friday</td>
+          <td colspan="2">$3,200</td>
+        </tr>
+        <tr>
+          <td>December</td>
+          <td>$6,820</td>
+          <td>$7,500</td>
         </tr>
       </tbody>
       <tfoot>
         <tr>
-          <td>Hello</td>
+          <td colspan="3">Compiled 12.20.2020 by bRauls</td>
         </tr>
       </tfoot>
     </table>
