--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 
         <li>Lesson 06: <a href="#">Home Page</a></li>
 
-        <li>Lesson 07: <a href="./Week 7/index.html">Lazy Load</a></li>
-        
+        <li>Lesson 07: <a href="./chambers/Discover.html">Discover</a></li>
 
-        <li>Lesson 08: <a href="#">Home Page</a></li>
+        <li>Lesson 08: <a href="./chambers/Form.html">Forms</a></li>
+        <li>Lesson 08: <a href="./chambers/Join.html">Join</a></li>
 
         <li>Lesson 09: <a href="#">Home Page</a></li>
 
