--- a/chambers/index.html
+++ b/chambers/index.html
@@ -28,7 +28,7 @@
         <li><a href="#">Menu</a></li>
         <li><a href="#home">Home</a></li>
         <li><a href="./Discover.html">Discover</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="./Join.html">Contact</a></li>
         <li><a href="#about">About</a></li>
       </ul>
     </nav>
