--- a/chambers/Join.html
+++ b/chambers/Join.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script defer src="./js/join.js"></script>
     <link rel="stylesheet" href="./css/Join.css" />
   </head>
   <body>
@@ -45,6 +46,9 @@
 
         <input type="text" id="BusinessName" name="BusinessName" required />
         <button formaction="./msg.html" id="button">Submit</button>
+        <!-- <button type="submit" onclick="displayDate()" id="button"> -->
+          Submit
+        </button>
         <h2>Select your Membership</h2>
         <div class="radio">
           <input
