--- a/chambers/index.html
+++ b/chambers/index.html
@@ -24,13 +24,15 @@
     </div>
     <nav>
       <button class="HMB">&#9776;</button>
-      <ul>
-        <li><a href="#">Menu</a></li>
-        <li><a href="#home">Home</a></li>
-        <li><a href="./Discover.html">Discover</a></li>
-        <li><a href="./Join.html">Contact</a></li>
-        <li><a href="#about">About</a></li>
-      </ul>
+      <div id="ul">
+        <ul>
+          <li><a href="#">Menu</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="./Discover.html">Discover</a></li>
+          <li><a href="./Join.html">Join</a></li>
+          <li><a href="#about">About</a></li>
+        </ul>
+      </div>
     </nav>
     <main>
       <div id="div1">
