--- a/chambers/Join.html
+++ b/chambers/Join.html
@@ -7,10 +7,34 @@
     <title>Document</title>
     <script defer src="./js/join.js"></script>
     <link rel="stylesheet" href="./css/Join.css" />
+    <script defer src="./js/jsfile.js"></script>
+
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
+    <header>
+      <img src="./images/rsz_logo-color.webp" alt="Logo" />
+      <h1>NYC Chambers of Commerce</h1>
+    </header>
+
+    <div class="date"></div>
+    <div id="RenDate">
+      <h3>Come join us for the Chambers meet and greet Wednesday at 7:00 PM</h3>
+    </div>
+    <nav>
+      <button class="HMB">&#9776;</button>
+      <div id="ul">
+        <ul>
+          <li><a href="#">Menu</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./Discover.html">Discover</a></li>
+          <li><a href="./Join.html">Join</a></li>
+          <li><a href="#about">About</a></li>
+        </ul>
+      </div>
+    </nav>
     <div id="flexbox">
-      <form method="get" action="">
+      <form method="get" action="./msg.html">
         <label for="fname">First Name</label>
         <input id="fname" type="text" name="firstname" required />
 
@@ -31,7 +55,7 @@
           placeholder="xyz@email"
           type="email"
           name="email"
-          id="email"
+          id="Email"
           required
         />
         <label for="CellPhoneNumber">Cell Phone Number</label>
@@ -45,10 +69,11 @@
         <label for="BusinessName">Bsuiness Name</label>
 
         <input type="text" id="BusinessName" name="BusinessName" required />
-        <button formaction="./msg.html" id="button">Submit</button>
-        <!-- <button type="submit" onclick="displayDate()" id="button"> -->
-          Submit
+        <!-- <button formaction="./msg.html" id="button">Submit</button> -->
+        <button type="submit" onclick="displayDate()" id="button">
+          Button
         </button>
+
         <h2>Select your Membership</h2>
         <div class="radio">
           <input
@@ -106,6 +131,29 @@
         </ul>
       </div>
     </div>
+    <footer>
+      <div id="top">
+        <div>
+          <img src="./images/rsz_logo-color.webp" alt="logo" />
+          <h4>NYC Chambers of Commerce E 109th st</h4>
+        </div>
+        <div>
+          <h4>nycchambersofcommerce.com</h4>
+          <h4>(917)-123-4567</h4>
+        </div>
+      </div>
+
+      <div id="bottom">
+        <div>
+          <h3>&copy; NYC Chambers of Commerce</h3>
+          <h2>Vishal Vaid</h2>
+        </div>
+        <div>
+          <h4>WDD 230 Project</h4>
+          <h2 id="currentdate">Last Updated</h2>
+        </div>
+      </div>
+    </footer>
 
     <!-- <h2>Membership Levels Benefits</h2>
       <h3>NP Membership</h3>
