--- a/chambers/Discover.html
+++ b/chambers/Discover.html
@@ -19,48 +19,48 @@
     <main id="main-grid">
       <img
         src="https://dummyimage.com/500x333/ccc/fff"
-        data-src="discover images/rsz_1uwe-conrad-HF6tZbheu1Y-unsplash.jpg"
+        data-src="discoverimages/rsz_1uwe-conrad-HF6tZbheu1Y-unsplash.jpg"
         alt="Manhatten"
       />
       <img
         src="https://dummyimage.com/300x300/ccc/fff"
-        data-src="./discover images/rsz_vangelis-kovu-iJiSSjM4F8A-unsplash.jpg"
+        data-src="discoverimages/rsz_vangelis-kovu-iJiSSjM4F8A-unsplash.jpg"
         alt="Brooklyn Bridge"
       />
       <img
         src="https://dummyimage.com/300x300/ccc/fff"
-        data-src="./discover images/rsz_tim-hufner-xoTfBhCZ5TQ-unsplash.jpg"
+        data-src="discoverimages/rsz_tim-hufner-xoTfBhCZ5TQ-unsplash.jpg"
         alt="Train"
       />
       <img
         src="https://dummyimage.com/300x300/ccc/fff"
-        data-src="./discover images/rsz_1drew-dizzy-graham-x6QPa_5ZqOc-unsplash.jpg"
+        data-src="discoverimages/rsz_1drew-dizzy-graham-x6QPa_5ZqOc-unsplash.jpg"
         alt="Texi"
       />
       <img
         src="https://dummyimage.com/300x300/ccc/fff"
-        data-src="./discover images/rsz_tom-nora-L5fYlbwE0GI-unsplash.jpg"
+        data-src="discoverimages/rsz_tom-nora-L5fYlbwE0GI-unsplash.jpg"
         alt="US Flag"
       />
       <img
         src="https://dummyimage.com/300x300/ccc/fff"
-        data-src="./discover images/rsz_andrea-belussi--cTrOFIF12Q-unsplash.jpg"
+        data-src="discoverimages/rsz_andrea-belussi--cTrOFIF12Q-unsplash.jpg"
         alt="Central Park"
       />
       <img
         src="https://dummyimage.com/300x300/ccc/fff"
-        data-src="./discover images/rsz_avi-werde-QqUceByQlhM-unsplash.jpg"
+        data-src="discoverimages/rsz_avi-werde-QqUceByQlhM-unsplash.jpg"
         alt="Liberty"
       />
       <img
         src="https://dummyimage.com/300x300/ccc/fff"
-        data-src="./discover images/rsz_joshua-earle-X_roZ7toBJY-unsplash.jpg"
+        data-src="discoverimages/rsz_joshua-earle-X_roZ7toBJY-unsplash.jpg"
         alt="TimesSquare"
       />
       <img
         id="CentralPark"
         src="https://dummyimage.com/300x300/ccc/fff"
-        data-src="discover images/rsz_brendan-church-pKeF6Tt3c08-unsplash.jpg"
+        data-src="discoverimages/rsz_brendan-church-pKeF6Tt3c08-unsplash.jpg"
         alt="Central Park"
       />
     </main>
