--- a/chambers/Tables.html
+++ b/chambers/Tables.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forms</title>
-    <link rel="stylesheet" href="./css/Form.css" />
+    <link rel="stylesheet" href="./css/tables.css" />
   </head>
   <body>
     <table>
