--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <li>Lesson 08: <a href="./chambers/Form.html">Forms</a></li>
         <li>Lesson 08: <a href="./chambers/Join.html">Join</a></li>
 
-        <li>Lesson 09: <a href="#">Home Page</a></li>
+        <li>Lesson 09: <a href="./week9/prophets.html">Prophets</a></li>
+        <li>Lesson 09: <a href="./week9/directory.html">Directory</a></li>
 
         <li>Lesson 10: <a href="#">Home Page</a></li>
 
