--- a/chambers/Join.html
+++ b/chambers/Join.html
@@ -67,6 +67,7 @@
         />
 
         <label for="BusinessName">Bsuiness Name</label>
+        <input id="time-loaded" type="hidden" name="todaydate" />
 
         <input type="text" id="BusinessName" name="BusinessName" required />
         <!-- <button formaction="./msg.html" id="button">Submit</button> -->
