--- a/week9/directory.html
+++ b/week9/directory.html
@@ -9,6 +9,15 @@
     <title>Directory</title>
   </head>
   <body>
-    <div id="Companies"></div>
+    <main>
+      <div>
+        <button id="list">&#9868;</button>
+        <button id="grid">&#9871;</button>
+      </div>
+      <div id="Companies">
+        <div id="cards"></div>
+        <div id="tables"></div>
+      </div>
+    </main>
   </body>
 </html>
