--- a/chambers/Join.html
+++ b/chambers/Join.html
@@ -70,10 +70,8 @@
         <input id="time-loaded" type="hidden" name="todaydate" />
 
         <input type="text" id="BusinessName" name="BusinessName" required />
-        <!-- <button formaction="./msg.html" id="button">Submit</button> -->
-        <button type="submit" onclick="displayDate()" id="button">
-          Button
-        </button>
+        <button formaction="./msg.html" id="button">Submit</button>
+        <!-- <button type="submit" onclick="displayDate()" id="button"></button> -->
 
         <h2>Select your Membership</h2>
         <div class="radio">
