--- a/week9/directory.html
+++ b/week9/directory.html
@@ -11,12 +11,14 @@
   <body>
     <main>
       <div>
-        <button id="list">&#9868;</button>
-        <button id="grid">&#9871;</button>
+        <section>
+          <button id="list">&#9868;</button>
+          <button id="grid">&#9871;</button>
+        </section>
       </div>
       <div id="Companies">
         <div id="cards"></div>
-        <div id="tables"></div>
+        <table></table>
       </div>
     </main>
   </body>
