--- a/chambers/FormPractice.html
+++ b/chambers/FormPractice.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/Form.css" />
+    <link rel="stylesheet" href="./css/tables.css" />
     <title>Form</title>
   </head>
   <body>
@@ -53,6 +53,5 @@
         </tr>
       </tfoot>
     </table>
-
   </body>
 </html>
