--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <li>Lesson 06: <a href="#">Home Page</a></li>
 
-        <li>Lesson 07: <a href="./chambers/Discover.html">Discover</a></li>
+        <li>Lesson 07: <a href="chambers/Discover.html">Discover</a></li>
 
         <li>Lesson 08: <a href="./chambers/Form.html">Forms</a></li>
         <li>Lesson 08: <a href="./chambers/Join.html">Join</a></li>
