--- a/week9/directory.html
+++ b/week9/directory.html
@@ -16,8 +16,8 @@
           <button id="grid">&#9871;</button>
         </section>
       </div>
-      <div id="Companies">
-        <div id="cards"></div>
+      <div class="Companies">
+        <div class="cards"></div>
         <table></table>
       </div>
     </main>
