--- a/index.html
+++ b/index.html
@@ -27,34 +27,40 @@
     </header>
     <hr id="abc" />
     <main>
-      <img class="img1" src="./thumbnail_IMG_1551.jpg" alt="My Picture" />
+      <img class="img1" src="thumbnail_IMG_1551.jpg" alt="My Picture" />
       <ul>
         <li>Lesson 01: <a href="#">Home Page</a></li>
 
         <li>
           Lesson 02:
-          <a href="./lesson2/design-principles.html">Design Principles</a>
+          <a href="lesson2/design-principles.html">Design Principles</a>
         </li>
 
-        <li>Lesson 03: <a href="./lesson3/site-planHome.html">Site Plan</a></li>
+        <li>Lesson 03: <a href="lesson3/site-planHome.html">Site Plan</a></li>
 
-        <li>
-          Lesson 04: <a href="./chambers/index.html">Chambers Home Page</a>
-        </li>
+        <li>Lesson 04: <a href="chambers/index.html">Chambers Home Page</a></li>
 
-        <li>Lesson 05: <a href="./chambers/index.html">Home Page</a></li>
+        <li>Lesson 05: <a href="chambers/index.html">Home Page</a></li>
 
-        <li>Lesson 05: <a href="./lesson 5/index.html">DOM Home Work</a></li>
+        <li>Lesson 05: <a href="lesson 5/index.html">DOM Home Work</a></li>
 
         <li>Lesson 06: <a href="#">Home Page</a></li>
 
+        <li>
+          Lesson 07:
+          <a href="./week7/index.html">Progressive Loading of Images</a>
+        </li>
+
         <li>Lesson 07: <a href="chambers/Discover.html">Discover</a></li>
 
-        <li>Lesson 08: <a href="./chambers/Form.html">Forms</a></li>
-        <li>Lesson 08: <a href="./chambers/Join.html">Join</a></li>
+        <li>
+          Lesson 08:
+          <a href="chambers/FormPractice.html">Activity: Table Build</a>
+        </li>
+        <li>Lesson 08: <a href="chambers/Join.html">Join</a></li>
 
-        <li>Lesson 09: <a href="./week9/prophets.html">Prophets</a></li>
-        <li>Lesson 09: <a href="./week9/directory.html">Directory</a></li>
+        <li>Lesson 09: <a href="week9/prophets.html">Prophets</a></li>
+        <li>Lesson 09: <a href="week9/directory.html">Directory</a></li>
 
         <li>Lesson 10: <a href="#">Home Page</a></li>
 
