--- a/chambers/index.html
+++ b/chambers/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <script defer src="./js/jsfile.js"></script>
+    <script defer src="./js/weather-api.js"></script>
     <link rel="shortcut icon" href="./Images/favicon.png" />
 
     <title>Document</title>
@@ -61,7 +62,7 @@
         <h2>Weather</h2>
         <img id="icon2" src="./images/storm.png" alt="" />
         <h3><span id="t"> 20 </span>&#8457;</h3>
-        <h4><b>Thunderstorm</b></h4>
+        <h4 id="description"></h4>
         <hr />
         <p>Wind Speed: <span id="speed"> 25</span>km/h</p>
         <p>Wind Chill: <span id="WC"> NA</span>&#8457;</p>
