--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
         <li>Lesson 09: <a href="week9/prophets.html">Prophets</a></li>
         <li>Lesson 09: <a href="week9/directory.html">Directory</a></li>
 
-        <li>Lesson 10: <a href="#">Home Page</a></li>
+        <li>
+          Lesson 10:
+          <a href="./chambers/index.html">Assignment: Using the Weather API</a>
+        </li>
 
         <li>Lesson 11: <a href="#">Home Page</a></li>
 
