--- a/week9/directory.html
+++ b/week9/directory.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     <main>
-      <div>
+      <div id="button">
         <section>
-          <button id="list">&#9868;</button>
-          <button id="grid">&#9871;</button>
+          <button id="listButton">&#9868;Click Here for List</button>
+          <button id="gridButton">&#9871;Click Here for Grid</button>
         </section>
       </div>
       <div class="Companies">
