--- a/chambers/index.html
+++ b/chambers/index.html
@@ -27,8 +27,7 @@
       <button class="HMB">&#9776;</button>
       <div id="ul">
         <ul>
-          <li><a href="#">Menu</a></li>
-          <li><a href="#home">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="./Discover.html">Discover</a></li>
           <li><a href="./Join.html">Join</a></li>
           <li><a href="#about">About</a></li>
