--- a/Vin's Potatos/site-plan.html
+++ b/Vin's Potatos/site-plan.html
@@ -8,21 +8,33 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>[FirstName LastName]</h2>
-      <h2>WDD 130-[section]</h2>
+      <h1>Vin's Vally Potato</h1>
+      <h2>VIN</h2>
+      <h2>WDD 230-Sister Anderson</h2>
       <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
     </header>
     <main>
       <!-- ------------------------Steps 2-5------------------------------ -->
       <hr />
       <h2>Overview</h2>
-      <h3>Purpose</h3>
-      <p>[Your purpose here]</p>
+      <h3>Business</h3>
+      <p>
+        As the owner of this business my main goal is to grow my business as
+        much as possible. One of the main purposes of this website is marketing,
+        The content Includes the verity of Potatos and services for our
+        customers. I am also considering cutomer's convenience in terms of
+        checking rates online. The main goal is to make a beautiful website
+        which attracts customers of all age and genders.
+      </p>
       <!-- change this -->
 
-      <h3>Audience</h3>
-      <p>[Your audience here]</p>
+      <h3>My Audience are Potato wholesale buyers</h3>
+      <p>
+        My Audience are Potato wholesale buyers from all over the America. My
+        customers are local family's, small business owners such as Texas Road
+        House Resturant and Business owners who buy in Potato in Bulk. We ship
+        our Potato all over the United States.
+      </p>
       <!-- change this -->
 
       <hr />
@@ -30,8 +42,8 @@
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
       <img
-        src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png"
-        alt="Logo image"
+        src="./Images/rsz_vins-valley-potatoes-low-resolution-color-logo.jpg"
+        alt="Logo"
       />
       <hr />
       <h2>Style Guide</h2>
@@ -44,9 +56,9 @@
       <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
       <p>Palette URL:</p>
       <a
-        href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
+        href="https://coolors.co/ffffff-e90b0b-e5edf0-99582a-407076"
         target="_blank"
-        >https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a
+        >https://coolors.co/ffffff-e90b0b-e5edf0-99582a-407076</a
       >
 
       <table class="colors">
@@ -58,10 +70,10 @@
         </tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
         <tr>
-          <td class="primary">[#396E94]</td>
-          <td class="secondary">[#E7C24F]</td>
-          <td class="accent1">[#A43312]</td>
-          <td class="accent2"></td>
+          <td class="primary">#99582A</td>
+          <td class="secondary">#FFFFFF</td>
+          <td class="accent1">#E5EDF0</td>
+          <td class="accent2">#E90B0B</td>
         </tr>
       </table>
 
@@ -71,11 +83,11 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]
+        Heading Font: Roboto
         <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]
+        Paragraph Font: Source Sans Pro
         <!-- change this -->
       </h4>
       <h3>Normal paragraph example</h3>
@@ -105,12 +117,15 @@
       <hr />
       <h2>Site Map</h2>
       <div class="sitemap">
-        <div class="sm-home">Home</div>
+        <div class="sm-home">About US</div>
         <div class="sm-page2">
-          [Page2]
+          Our Product
           <!-- this page will have a name later -->
         </div>
-        <div class="sm-page3">Contact Us</div>
+        <div clas="sm-page3">Potato Pricing</div>
+        <div clas="sm-page4">Favroite Recepies</div>
+        <div clas="sm-page5">Contact Us</div>
+        <div class="sm-page6">Your Cart</div>
 
         <div class="top">&nbsp;</div>
         <div class="left">&nbsp;</div>
@@ -122,11 +137,7 @@
 
       <h3>Home</h3>
 
-      <img
-        src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png"
-        alt="home page wireframe"
-      />
-
+      <img src="./Images/Screenshot (19).png" alt="" />
       <h3>[Page 2]</h3>
 
       <!-- <img src="#" alt="page 2 wireframe"> -->
