--- a/index.html
+++ b/index.html
@@ -67,9 +67,14 @@
           <a href="./chambers/index.html">Assignment: Using the Weather API</a>
         </li>
 
-        <li>Lesson 11: <a href="#">Home Page</a></li>
+        <li>
+          Lesson 11:
+          <a href="./Vin's Potatos/site-plan.html">Vin's Potatoes Site Plan</a>
+        </li>
 
-        <li>Lesson 12: <a href="#">Home Page</a></li>
+        <li>
+          Lesson 12: <a href="./Vin's Potatos/Index.html">Vin's Potatoes</a>
+        </li>
       </ul>
     </main>
     <hr />
