--- a/Vin's Potatos/favroitereceipe.html
+++ b/Vin's Potatos/favroitereceipe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./Styles/home.css" />
+    <link rel="stylesheet" href="./Styles/page4.css" />
     <title>About US</title>
   </head>
   <body>
@@ -45,53 +45,62 @@
       <h1>VIN'S IDAHO POTATO</h1>
     </div>
     <main>
-      <h3>About US</h3>
-      <img id="img1" src="./Images/potatoes-Belfast.jpg" alt="Home_Pic1" />
-      <p id="mainp1">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam a
-        reprehenderit enim, doloribus, tempore possimus, praesentium
-        voluptatibus accusamus neque eum recusandae laboriosam quidem omnis
-        officia expedita quis unde magnam culpa! Consectetur delectus molestias
-        beatae aut ipsa tempora nostrum? Blanditiis voluptatem iusto quis
-        adipisci nobis esse rerum doloribus odit, fugit aliquam expedita dicta
-        similique quo, corporis itaque rem iure quae vero ad id temporibus quasi
-        atque alias? Quia rerum fuga cupiditate doloribus deleniti cumque
-        aliquam libero labore dolore, maxime ratione non omnis iste illum ad nam
-        provident quos perferendis. Est ratione deserunt soluta id quidem ab,
-        itaque perspiciatis fuga! Sequi, saepe?
-      </p>
-      <br />
-
-      <br />
-      <img
-        id="img2"
-        src="./Images/pexels-pixabay-1442481.jpg"
-        alt="Home_Pic2"
-      />
-      <p id="mainp2">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto
-        veritatis est eaque maxime dolores explicabo ad ullam culpa? Culpa
-        veritatis exercitationem praesentium. Aperiam, autem unde. Officia ea
-        mollitia quo quasi possimus maxime, corporis unde porro saepe eum quod
-        in explicabo aliquam numquam aspernatur! In maxime odio inventore odit
-        voluptatibus. Accusamus, fuga temporibus illo nihil perspiciatis quas,
-        nostrum facere vel earum molestiae fugit ullam assumenda repudiandae
-        aliquam voluptatum dolores consequatur nam commodi! Repellendus
-        dignissimos illo officia delectus, deserunt odio iste nostrum placeat
-        nulla quo. Quo, odio ipsum. Iusto vero ipsa ratione doloribus sequi
-        reprehenderit esse deserunt ipsum laudantium, perspiciatis tempora fuga.
-      </p>
+      <h2>Favroite Receipe</h2>
+      <div>
+        <img
+          src="./Images/parnis-azimi-qrDM1rmKgOQ-unsplash.jpg"
+          alt="Mashed"
+        />
+        <img
+          src="./Images/nathan-dumlao-neapFA-k76c-unsplash.jpg"
+          alt="Baked"
+        />
+        <img
+          src="./Images/victoria-shes-UC0HZdUitWY-unsplash.jpg"
+          alt="Grilled"
+        />
+      </div>
+      <div id="p4div1">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+          fuga laboriosam non praesentium repellat at distinctio adipisci
+          temporibus dignissimos totam, cumque ipsum veritatis placeat molestias
+          est voluptate neque dicta itaque. Unde cupiditate ipsam excepturi!
+          Veritatis ducimus molestiae voluptatem velit quia eos aperiam ea iure
+          beatae ratione explicabo aliquid, et ad.
+        </p>
+        <br />
+        <!-- </div>
+      <div id="p4div2"> -->
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+          fuga laboriosam non praesentium repellat at distinctio adipisci
+          temporibus dignissimos totam, cumque ipsum veritatis placeat molestias
+          est voluptate neque dicta itaque. Unde cupiditate ipsam excepturi!
+          Veritatis ducimus molestiae voluptatem velit quia eos aperiam ea iure
+          beatae ratione explicabo aliquid, et ad.
+        </p>
+        <br />
+        <!-- </div>
+      <div id="p4div3"> -->
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+          fuga laboriosam non praesentium repellat at distinctio adipisci
+          temporibus dignissimos totam, cumque ipsum veritatis placeat molestias
+          est voluptate neque dicta itaque. Unde cupiditate ipsam excepturi!
+          Veritatis ducimus molestiae voluptatem velit quia eos aperiam ea iure
+          beatae ratione explicabo aliquid, et ad.
+        </p>
+      </div>
     </main>
     <footer>
       <h3>VIN'S IDAHO POTATO &copy; 2022 - VIN</h3>
-
       <a href="./Index.html">Home</a>
       <a href="./ourproduct.html">Our Product</a>
       <a href="./checkprice.html">Pricing</a>
       <a href="./favroitereceipe.html">Our Recipe</a>
       <a href="./contactus.html">Contact US</a>
       <a href="./cart.html">Cart</a>
-
       <div class="social">
         <a href="https://facebook.com" target="_blank">
           <img src="images/facebook.png" alt="fb icon" />
